fix: avoid hint and input overlap in stepper
see https://gravitee.atlassian.net/browse/APIM-395

--- a/gravitee-apim-console-webui/src/management/_stepper.scss
+++ b/gravitee-apim-console-webui/src/management/_stepper.scss
@@ -7,9 +7,7 @@ md-select + .hint {
 .hint {
   /* Position the hint */
   position: absolute;
-  left: 2px;
-  right: auto;
-  bottom: 7px;
+  top: 40px;
   /* Copy styles from ng-messages */
   font-size: 12px;
   line-height: 14px;
